--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,13 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 .venv/
+
+# Generated Reports
+# Ignore all generated report files but keep folder structure
+reports/**/*.md
+reports/**/*.json
+reports/**/*.csv
+reports/**/*.xlsx
+reports/**/*.pdf
+# Keep .gitkeep files to maintain folder structure
+!reports/**/.gitkeep
