Enhance GitHub MCP Integration and Update Documentation
- Added new commands to the Makefile for GitHub integration tests and connectivity checks.

- Updated QUICK_SETUP.md and README.md to reflect changes in GitHub MCP configuration and usage.

- Introduced new GitHub tools for repository management, pull request automation, and issue tracking.

- Created comprehensive documentation for GitHub MCP integration, including setup, usage, and troubleshooting.

- Implemented a script to test GitHub repository connectivity, ensuring seamless integration with the agent.

--- a/src/aws_devops_agent/config/.env.example
+++ b/src/aws_devops_agent/config/.env.example
@@ -15,7 +15,7 @@ AWS_SESSION_TOKEN=your_session_token_if_using_sso
 # Generate at: https://github.com/settings/personal-access-tokens/new
 # Required scopes: repo, read:org, read:user, project
 GITHUB_PERSONAL_ACCESS_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-GITHUB_ORG=dpetrocelli
+GITHUB_ORG=fakush
 
 # =============================================================================
 # Agent Configuration
