Update README and Quick Setup with validated commands and MIT License
- Added MIT License to README
- Moved essential documentation (User Manual, Quick Setup, App Info) to top of README
- Validated all commands against actual Makefile
- Fixed command discrepancies between README and Quick Setup
- Enhanced command documentation with accurate descriptions
- Improved project structure and documentation organization

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ reports/**/*.pdf
 # Local session data - contains conversation history and private data
 .sessions/
 *.session
+github-mcp-server
